--- a/SRC/SCSS/base/_mixins.scss
+++ b/SRC/SCSS/base/_mixins.scss
@@ -1,20 +1,21 @@
+@use 'sass:color';
 @use 'variables' as v;
 
 /** Media Queries **/
 @mixin telefono {
-    @media (min-width: #{$telefono}) {
+    @media (min-width: #{v.$telefono}) {
         @content;
     }
 }
 
 @mixin tablet {
-    @media (min-width: #{$tablet}) {
+    @media (min-width: #{v.$tablet}) {
         @content;
     }
 }
 
 @mixin desktop {
-    @media (min-width: #{$desktop}) {
+    @media (min-width: #{v.$desktop}) {
         @content;
     }
 }
@@ -37,7 +38,7 @@
     border: none;
 
     &:hover {
-        background-color: darken($bgColor, 5);
+        background-color: color.adjust($bgColor, $lightness: -5%);
         cursor: pointer;
     }
 }
